-directive, ui-router improvments

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <script src="/components/pizzas/classifides.ctr.js"></script>
     <script src="/components/pizzas/classifides.fac.js"></script>
     <script src="/components/pizzas/new/pizzas.new.ctr.js"></script>
+    <script src="/components/pizzas/card/pizza-card.dir.js"></script>
+    <script src="/components/pizzas/edit/pizzas.edit.ctr.js"></script>
     <script src="/node_modules/lodash/lodash.min.js"></script>
     <script src="/node_modules/angular-ui-router/release/angular-ui-router.js"></script>
 </body>
